Implement call to get location information from the remote ip that is called from
closes  #4

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Signal server</h1>
-    <p>Welcome {{message}}, this is the signaling server</p>
+    <p>Welcome {{forwarded}}</p>
+    <p>This is the signaling server :)</p>
   </body>
 </html>
